Make button components, Typography and Color modules

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,4 +1,7 @@
 @import "modules/reset.scss";
+@import "modules/colors.scss";
+@import "modules/typography.scss";
+
 
 
 @import "partials/buttons.scss";
