Begin Contact section component - break for lecture

--- a/public/sass/modules/_flexbox.scss
+++ b/public/sass/modules/_flexbox.scss
@@ -1,8 +1,8 @@
-@mixin flex-container($direction,$wrap) {
+@mixin flex-container($direction,$wrap,$justify) {
   display:flex;
   flex-direction: $direction;
   flex-wrap: $wrap;
-  justify-content: center;
+  justify-content: $justify;
   align-content: center;
   align-items: center;
 }
