--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,10 +1,12 @@
 @import "modules/reset.scss";
+@import "modules/typography.scss";
+@import "modules/base.scss";
 @import "modules/flexbox.scss";
 @import "modules/colors.scss";
-@import "modules/typography.scss";
 @import "modules/icon-fonts";
 
 @import "partials/connection-links.scss";
 @import "partials/icons.scss";
 @import "partials/buttons.scss";
+@import "partials/contact.scss";
 
