Add breakpoint mixin

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -2,6 +2,7 @@
 @import "modules/typography.scss";
 @import "modules/base.scss";
 @import "modules/flexbox.scss";
+@import "modules/breaks";
 @import "modules/colors.scss";
 @import "modules/icon-fonts";
 
