--- a/public/sass/modules/_breaks.scss
+++ b/public/sass/modules/_breaks.scss
@@ -1,11 +1,11 @@
 @mixin breaks($point) {
   @if $point == desktop {
-    @media (max-width: 1600px) { @content; }
+    @media (min-width: 1600px) { @content; }
   }
   @else if $point == tablet {
-    @media (max-width: 1250px) { @content; }
+    @media (min-width: 1250px) { @content; }
   }
   @else if $point == phone {
-    @media (max-width: 600px)  { @content; }
+    @media (min-width: 600px)  { @content; }
   }
 }
