Finish contact section with mostly flexbox

--- a/public/sass/modules/_flexbox.scss
+++ b/public/sass/modules/_flexbox.scss
@@ -1,5 +1,5 @@
-@mixin flex-container($direction,$wrap,$justify) {
-  display:flex;
+@mixin flex-container($type,$direction,$wrap,$justify) {
+  display: $type;
   flex-direction: $direction;
   flex-wrap: $wrap;
   justify-content: $justify;
