--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -11,5 +11,6 @@
 @import "partials/buttons.scss";
 @import "partials/contact.scss";
 @import "partials/footer.scss";
+@import "partials/header.scss";
 
 
