--- a/public/sass/partials/_header.scss
+++ b/public/sass/partials/_header.scss
@@ -1,3 +1,9 @@
-header {
-  font-family: $main-font-light;
+ul{ font-size: .7em;
+    text-transform: uppercase;
+  li {
+    padding-left: 1em;
+    padding-right: 1em;
+    float: right;
+    display: inline;
+  }
 }
