--- a/public/sass/partials/_footer.scss
+++ b/public/sass/partials/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  @include flex-container(row,nowrap);
+  @include flex-container(flex,row,nowrap,center);
   font-family: $main-font-medium;
   font-size: .4em;
   border-top: 1px solid $border-color-med;
