--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -10,6 +10,6 @@
 @import "partials/icons.scss";
 @import "partials/buttons.scss";
 @import "partials/contact.scss";
-@import "partials/footer.scss";
+@import "partials/hero-box";
 
 
