Secondary nav component. Restyled icons

--- a/public/sass/partials/_icons.scss
+++ b/public/sass/partials/_icons.scss
@@ -4,10 +4,10 @@
   padding: .3em;
   background-color: $background-color-dark;
 }
-.icon-pinterest:before {
-  font-size: 150%;
-  color: $text-color-dark;
-}
+// .icon-pinterest:before {
+//   font-size: 150%;
+//   color: $text-color-dark;
+// }
 .icon-menu:before {
   font-size: 150%;
   color: $text-color-dark;
