--- a/public/sass/modules/_icon-fonts.scss
+++ b/public/sass/modules/_icon-fonts.scss
@@ -16,7 +16,7 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 2;
+  // line-height: 2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
