Make feature box component, update btn component styles

--- a/public/sass/partials/_sec-nav.scss
+++ b/public/sass/partials/_sec-nav.scss
@@ -1,6 +1,6 @@
 .secondary-nav {
   color: $text-color-med;
-  padding: 1em 5em 2em 5em; // match the side paddings to hero-box
+  padding: 1em 8% 2em 8%;
   border-top: 1px solid $border-color-med;
   border-bottom: 1px solid $border-color-med;
   p {
