--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -13,6 +13,7 @@
 @import "partials/footer.scss";
 @import "partials/sec-nav.scss";
 @import "partials/hero-box";
+@import "partials/feature-box";
 
 
 
