Attempt to resolve errors

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -12,7 +12,9 @@
 @import "partials/contact.scss";
 @import "partials/footer.scss";
 @import "partials/sec-nav.scss";
-@import "partials/hero-box";
+@import "partials/hero-box.scss";
+// @import "partials/feature-box.scss";
+// @import "partials/header.scss";
 
 
 
