Reorg files. Make src directory. Make Previews component

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,3 +16,4 @@
 @import "partials/hero-box.scss";
 @import "partials/header.scss";
 @import "partials/feature-box.scss";
+@import "partials/previews.scss";
