--- a/public/sass/partials/_contact.scss
+++ b/public/sass/partials/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+  padding-bottom: 2em;
   @include flex-container(flex,row,wrap,space-around);
   text-align: center;
   .connection-links {
@@ -9,7 +10,7 @@
   }
 }
 .contact__method {
-  margin-top: 2em;
+  margin: 2em 1em;
   line-height: 1.5;
   @include breaks(desktop) {
     text-align: left;
