--- a/public/sass/partials/_header.scss
+++ b/public/sass/partials/_header.scss
@@ -3,7 +3,7 @@ header {
   h1 {
     color: $text-color-light;
     font-size: 1.5em;
-    padding-bottom: 1em;
+    padding: 1em;
     text-align: center;
   }
   ul li {
