--- a/public/sass/partials/_hero-box.scss
+++ b/public/sass/partials/_hero-box.scss
@@ -1,5 +1,8 @@
 .hero-box {
-  padding: 2em 40% 2em 8%;
+  padding: 2em 10% 2em 8%;
+  @include breaks(desktop) {
+    padding-right: 40%;
+  }
   background-color: $background-color-theme;
   h1 {
     font-family: $accent-font-regular;
