Break to show off Angular

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="soccr">
+<html lang="en" ng-app="blog">
   <head>
     <meta charset="UTF-8">
-    <title>Soccr: It's cool because it doesn't have an "e"</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Crud Blog</title>
     <link rel="stylesheet" href="/assets/styles/app.css">
+
+
+
+
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header class="site-header">
@@ -11,7 +20,7 @@
       <nav>
         <ul>
           <li><a href="#/">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">Learn</a></li>
         </ul>
       </nav>
     </header>
