--- a/src/app/index.html
+++ b/src/app/index.html
@@ -16,11 +16,11 @@
   </head>
   <body>
     <header class="site-header">
-      <h1>Soccr</h1>
+      <h1>Blog</h1>
       <nav>
         <ul>
           <li><a href="#/">Home</a></li>
-          <li><a href="#">Learn</a></li>
+          <li><a href="#">About</a></li>
         </ul>
       </nav>
     </header>
@@ -32,43 +32,42 @@
     <!-- <script src="/assets/js/app.packed.js"></script> -->
     <script src="/assets/js/app/app.js"></script>
 
-    <script src="/assets/js/app/players/players.service.js"></script>
-    <script src="/assets/js/app/players/players.ctrl.js"></script>
-    <script src="/assets/js/app/players/player.ctrl.js"></script>
-    <script src="/assets/js/app/players/player_form.ctrl.js"></script>
-    <!-- <script src="/assets/js/app/players/player_details.directive.js"></script> -->
+    <script src="/assets/js/app/posts/posts.service.js"></script>
+    <script src="/assets/js/app/posts/posts.ctrl.js"></script>
+    <script src="/assets/js/app/posts/post.ctrl.js"></script>
+    <script src="/assets/js/app/posts/post_form.ctrl.js"></script>
+    <!-- <script src="/assets/js/app/posts/post_details.directive.js"></script> -->
 
     <!-- templates -->
-    <script type="text/ng-template" id="partials/players/players_list.html">
-      <h1>List of players!</h1>
+    <script type="text/ng-template" id="partials/posts/posts_list.html">
+      <h1>List of posts!</h1>
       <ul>
-        <li ng-repeat="player in vm.players">
-          <a href="#/players/{{player._id}}">{{player.name}}</a> (<button ng-click="vm.delete(player)">Delete</button>)
+        <li ng-repeat="post in vm.posts">
+          <a href="#/posts/{{post._id}}">{{post.title}}</a> (<button ng-click="vm.delete(post)">Delete</button>)
         </li>
       </ul>
-      <a href="#/players/new">Add a new player</a>
+      <a href="#/posts/new">Add a new post</a>
     </script>
 
-    <script type="text/ng-template" id="partials/players/player_detail.html">
-      <pre>{{vm.player|json}}</pre>
-      <h1>{{vm.player.name}}</h1>
-      <h2>{{vm.player.team}}</h2>
-      <player-details ng-model="vm.player"/> <!-- playerDetails -->
-      <dl>
-        <dt>Position</dt>
-        <dd>{{vm.player.position}}</dd>
-        <dt>Jersey Number</dt>
-        <dd>{{vm.player.number}}</dd>
-      </dl>
-      <a href="#/players/{{vm.player._id}}/edit">Edit player</a>
+    <script type="text/ng-template" id="partials/posts/post_detail.html">
+      <!-- <pre>{{vm.post|json}}</pre> -->
+      <h1>{{vm.post.title}}</h1>
+      <p>{{vm.post.author}}</p>
+      <post-details ng-model="vm.post"/> <!-- postDetails -->
+      
+      <p>{{vm.post.content}}</p>
+      <ul><li>Published: {{vm.post.date}}</li><li>{{vm.post.comments}} comments</li></ul>
+
+      <a href="#/posts/{{vm.post._id}}/edit">Edit post</a>
     </script>
 
-    <script type="text/ng-template" id="partials/players/player_form.html">
+    <script type="text/ng-template" id="partials/posts/post_form.html">
       <form ng-submit="vm.save()">
-        <input type="text" ng-model="vm.player.name" placeholder="Name" />
-        <input type="text" ng-model="vm.player.team" placeholder="Team" />
-        <input type="number" ng-model="vm.player.number" placeholder="0" />
-        <input type="text" ng-model="vm.player.position" placeholder="Position" />
+        <input type="text" ng-model="vm.post.title" placeholder="Title" />
+        <input type="text" ng-model="vm.post.author" placeholder="Author" />
+        <input type="text" ng-model="vm.post.date" placeholder="Date" />
+        <input type="text" ng-model="vm.post.content" placeholder="Post text" />
+        <input type="number" ng-model="vm.post.comments" placeholder="how many comments" />
         <input type="submit" name="Submit">
       </form>
     </script>
