--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,19 @@
-@import 'variables';
-@import 'mixins';
-@import 'typography';
-@import 'site_header';
+@import "modules/reset.scss";
+@import "modules/typography.scss";
+@import "modules/base.scss";
+@import "modules/flexbox.scss";
+@import "modules/breaks";
+@import "modules/colors.scss";
+@import "modules/icon-fonts";
+
+@import "partials/connection-links.scss";
+@import "partials/icons.scss";
+@import "partials/buttons.scss";
+@import "partials/contact.scss";
+@import "partials/footer.scss";
+@import "partials/header.scss";
+@import "partials/sec-nav.scss";
+@import "partials/hero-box.scss";
+@import "partials/header.scss";
+@import "partials/feature-box.scss";
+@import "partials/previews.scss";
