--- a/src/styles/partials/_connection-links.scss
+++ b/src/styles/partials/_connection-links.scss
@@ -1,5 +1,5 @@
 .connection-links {
-  @include flex-container(inline-flex,row,nowrap,center);
+  @include flex-container(inline-flex,row,nowrap,center,center,center);
   position: relative;
   width: 8em;
   height: 8em;
@@ -22,7 +22,7 @@
   color: red;
 }
 .connection-links__icon:before {
-  @include flex-container(flex,row,nowrap,center);
+  @include flex-container(flex,row,nowrap,center,center,center);
   position: absolute;
   top: -0.4em;
   left: -0.4em;
