--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -2,7 +2,7 @@ footer {
   p {
     padding-bottom: 1em;
   }
-  @include flex-container(flex,row,wrap,center);
+  @include flex-container(flex,row,wrap,center,center,center);
   font-family: $main-font-medium;
   font-size: .4em;
   border-top: 1px solid $border-color-med;
