--- a/src/app/index.html
+++ b/src/app/index.html
@@ -83,10 +83,13 @@
       <!-- <pre>{{vm.post|json}}</pre> -->
       <h1>{{vm.post.title}}</h1>
       <p>{{vm.post.author}}</p>
-      <post-details ng-model="vm.post"/> <!-- postDetails -->
+      <!--<post-details ng-model="vm.post"></post-details>-->
       
       <p>{{vm.post.content}}</p>
-      <ul><li>Published: {{vm.post.date}}</li><li>{{vm.post.comments}} comments</li></ul>
+      <ul>
+        <li>Published: {{vm.post.date}}</li>
+        <li>{{vm.post.comments}} comments</li>
+      </ul>
 
       <a href="#/posts/{{vm.post._id}}/edit">Edit post</a>
     </script>
@@ -96,9 +99,9 @@
         <input type="text" ng-model="vm.post.title" placeholder="Title" />
         <input type="text" ng-model="vm.post.author" placeholder="Author" />
         <input type="text" ng-model="vm.post.date" placeholder="Date" />
-        <textarea ng-model="vm.post.content" form="post-form" rows="10" cols="50">Write something here</textarea>
+        <textarea ng-model="vm.post.content" form="post-form" rows="20" cols="50"></textarea>
         <input type="number" ng-model="vm.post.comments" placeholder="how many comments" />
-        <input type="submit" name="Submit">
+        <button type="submit" name="Submit">Submit</button>
       </form>
     </script>
 
