--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -17,3 +17,5 @@
 @import "partials/header.scss";
 @import "partials/feature-box.scss";
 @import "partials/previews.scss";
+@import "partials/post-detail.scss";
+@import "partials/post-form.scss";
