--- a/src/app/index.html
+++ b/src/app/index.html
@@ -48,16 +48,7 @@
     </nav><!-- end sec-nav -->
     <main ng-view></main>
 
-    <script src="/assets/node_modules/angular/angular.js"></script>
-    <script src="/assets/node_modules/angular-route/angular-route.js"></script>
-    <!-- <script src="/assets/js/app.packed.js"></script> -->
-    <script src="/assets/js/app/app.js"></script>
-
-    <script src="/assets/js/app/posts/posts.service.js"></script>
-    <script src="/assets/js/app/posts/posts.ctrl.js"></script>
-    <script src="/assets/js/app/posts/post.ctrl.js"></script>
-    <script src="/assets/js/app/posts/post_form.ctrl.js"></script>
-    <!-- <script src="/assets/js/app/posts/post_details.directive.js"></script> -->
+    <script src="/assets/js/packed.js"></script>
 
     <!-- templates -->
     <script type="text/ng-template" id="partials/posts/posts_list.html">
