Refactor server.js to avoid assets aliasing

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,7 @@
     <title>Crud Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="/assets/styles/app.css">
+    <link rel="stylesheet" href="/styles/app.css">
   </head>
   <body>
     <header>
@@ -48,7 +48,7 @@
     </nav><!-- end sec-nav -->
     <main ng-view></main>
 
-    <script src="/assets/js/packed.js"></script>
+    <script src="js/packed.js"></script>
 
     <!-- templates -->
     <script type="text/ng-template" id="partials/posts/posts_list.html">
