Format date field to give a default of the current date

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -84,9 +84,6 @@
     </script>
 
     <script type="text/ng-template" id="partials/posts/post_form.html">
-
-
-
       <form id="post-form" class="post-form" ng-submit="vm.save()" ng-controller="DateCtrl">
         <input type="text" ng-model="vm.post.title" placeholder="Title" />
         <input type="text" ng-model="vm.post.author" placeholder="Author" />
@@ -103,7 +100,7 @@
       <a class="btn btn__text btn--theme">Contact Now</a>
       <a class="btn btn__text btn--theme">Learn More</a>
     </section> <!--  end feature-box -->
-    <aside class="contact"> <!-- cntact -->
+    <aside class="contact"> <!-- contact -->
       <address class="contact__method"><a href="https://goo.gl/maps/C4Q1FUpTdJx">2319 Hilltop Haven Drive<br />Upper Greenwood Lake, NJ 07421</a></address>
       <div class="contact__method">
         <a href="tel:6624076792">662-407-6792</a>
